--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html id="html" lang="ru">
   <head>
+    <meta
+      property="og:description"
+      content="Ваш гид по Волгограду: Туристический помощник"
+    />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
